# scribble-transcriber

./: .gitignore  IMPLEMENTATION_SUMMARY.md  INSTALL.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  README.md  TEST_PLAN_OPEN_FOLDER.md  launch.command
backend/: .gitignore  README.md  backend.spec  backend_main.py  pyproject.toml  pytest.ini  requirements.txt  run_backend.py
backend/src/: __init__.py  main.py
backend/src/models/: __init__.py  requests.py  responses.py
backend/src/services/: __init__.py  audio_processor.py  diarization.py  gpu_manager.py  transcription.py  youtube_downloader.py
backend/src/utils/: __init__.py  security.py  validation.py
backend/tests/: __init__.py  test_diarization.py  test_gpu_manager.py  test_main.py  test_validation.py
docs/: INSTALL_UNSIGNED.md  MAC_APP_STORE.md  prevention-strategies.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: commands.rs  main.rs
scripts/: adhoc-sign-binaries.sh  build-backend.sh  dev.sh  download-ffmpeg.sh  server.sh  start-app.sh  start-server.sh  status-server.sh  stop-server.sh
todos/: 001-pending-p1-command-injection-path-validation.md  002-pending-p1-frontend-input-validation.md  003-pending-p1-unsupported-platform-handling.md  004-pending-p2-agent-native-compliance.md  005-pending-p2-simplify-duplicated-code.md  006-pending-p2-remove-excessive-logging.md  007-pending-p2-explicit-capability-permissions.md  008-pending-p3-add-unit-tests.md  009-pending-p3-ci-cross-platform-testing.md  010-pending-p3-rate-limiting.md  (+1 more)
(+11 files in other folders)
